# Customer-Support-Assistant-Backend

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: main.py
app/api/routes/: __init__.py  auth.py  tickets.py
app/api/schemas/: ticket.py  user.py
app/core/: config.py  dependencies.py  exceptions.py  security.py
app/db/: base.py  models.py
app/db/repositories/: base.py  ticket_repository.py  user_repository.py
app/services/: ai_service.py  auth_service.py  ticket_service.py
app/templates/: prompts.py
